--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "proxypool",
   "description": "自动抓取tg频道、订阅地址、公开互联网上的ss、ssr、vmess节点信息，聚合去重测试可用性后提供节点列表",
   "website": "https://proxy.tgbot.co/",
-  "repository": "https://github.com/zu1k/proxypool",
+  "repository": "https://github.com/ilpl/proxypool",
   "success_url": "/",
   "logo": "https://raw.githubusercontent.com/zu1k/proxypool/heroku/assets/proxy.jpg",
   "keywords": ["golang", "ss", "ssr", "vmess", "shadowsocks", "shadowsocksr", "trojan"],
